[gd_scene load_steps=11 format=3 uid="uid://d3rvgbkpl76kc"]

[ext_resource type="Script" path="res://Scripts/game_over.gd" id="1_dlelr"]
[ext_resource type="Texture2D" uid="uid://cljfdgsn38xxc" path="res://Assets/sprites/background-day.png" id="1_epefi"]
[ext_resource type="Texture2D" uid="uid://2bnacc4g1aug" path="res://Assets/sprites/gameover.png" id="2_7ye4d"]
[ext_resource type="AudioStream" uid="uid://c1xaxshxwpali" path="res://Assets/audio/die.ogg" id="4_kmvm8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d8tpd"]
bg_color = Color(1, 1, 1, 0.588235)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eurpx"]
bg_color = Color(0.00784314, 0.521569, 0, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0.415686, 0.415686, 0.415686, 0.615686)
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4u3vd"]
bg_color = Color(1, 1, 1, 0.588235)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_360ux"]
bg_color = Color(0.211765, 0.411765, 0.980392, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0.415686, 0.415686, 0.415686, 0.615686)
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1lero"]
bg_color = Color(1, 1, 1, 0.588235)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qt5bd"]
bg_color = Color(0.886275, 0.0156863, 0, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0.415686, 0.415686, 0.415686, 0.615686)
shadow_size = 4

[node name="Game Over" type="Node2D"]
script = ExtResource("1_dlelr")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(202, 359)
scale = Vector2(1.4, 1.4)
texture = ExtResource("1_epefi")

[node name="GameOverText" type="Sprite2D" parent="."]
position = Vector2(200, 152)
scale = Vector2(1.8, 1.8)
texture = ExtResource("2_7ye4d")

[node name="FinalScore" type="Label" parent="."]
offset_left = 48.0
offset_top = 216.0
offset_right = 338.0
offset_bottom = 277.0
theme_override_colors/font_shadow_color = Color(0.27451, 0.27451, 0.27451, 1)
theme_override_font_sizes/font_size = 42
text = "Your Score: 69"

[node name="PlayAgain" type="Button" parent="."]
offset_left = 64.0
offset_top = 371.0
offset_right = 336.0
offset_bottom = 449.0
theme_override_colors/font_color = Color(0.00784314, 0.521569, 0, 1)
theme_override_colors/font_focus_color = Color(0.00784314, 0.521569, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_d8tpd")
theme_override_styles/hover = SubResource("StyleBoxFlat_eurpx")
text = "Play Again"

[node name="SettingsButton" type="Button" parent="."]
offset_left = 64.0
offset_top = 464.0
offset_right = 336.0
offset_bottom = 541.0
theme_override_colors/font_color = Color(0.211765, 0.411765, 0.980392, 1)
theme_override_colors/font_focus_color = Color(0.211765, 0.411765, 0.980392, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_4u3vd")
theme_override_styles/hover = SubResource("StyleBoxFlat_360ux")
text = "Settings"

[node name="Exit" type="Button" parent="."]
offset_left = 64.0
offset_top = 560.0
offset_right = 336.0
offset_bottom = 633.0
theme_override_colors/font_color = Color(0.886275, 0.0156863, 0, 1)
theme_override_colors/font_focus_color = Color(0.886275, 0.0156863, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_1lero")
theme_override_styles/hover = SubResource("StyleBoxFlat_qt5bd")
text = "Exit"

[node name="DieSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_kmvm8")

[connection signal="pressed" from="PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
